force-app/main/default/objects/Case/fields/Age_Since_Modified_Hours__c.field-meta.xml
<CustomField>
    <fullName>Age_Since_Modified_Hours__c</fullName>
    <formula>FLOOR(24 * (NOW() - LastModifiedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age Since Modified (Hours)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>