force-app/main/default/objects/Case/fields/CodeScan_Org_Id__c.field-meta.xml
<CustomField>
    <fullName>CodeScan_Org_Id__c</fullName>
    <externalId>true</externalId>
    <label>CodeScan Org Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>