force-app/main/default/objects/Case/fields/Company_Size_pl__c.field-meta.xml
<CustomField>
    <fullName>Company_Size_pl__c</fullName>
    <label>Company Size pl</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-99</fullName>
            </value>
            <value>
                <fullName>100-499</fullName>
            </value>
            <value>
                <fullName>500+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>