force-app/main/default/objects/Case/fields/Desk_com_ID_c__c.field-meta.xml
<CustomField>
    <fullName>Desk_com_ID_c__c</fullName>
    <externalId>true</externalId>
    <label>Desk_com_ID__c</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>