force-app/main/default/objects/Case/fields/HasOptedIntoEmailCase__c.field-meta.xml
<CustomField>
    <fullName>HasOptedIntoEmailCase__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Opt In</label>
    <type>Checkbox</type>
</CustomField>