force-app/main/default/objects/Case/fields/Last_Outbound_Activity__c.field-meta.xml
<CustomField>
    <fullName>Last_Outbound_Activity__c</fullName>
    <defaultValue>Now()</defaultValue>
    <description>Last time an email was sent. We use this to find cases that need follow up</description>
    <label>Last Outbound Activity</label>
    <type>DateTime</type>
</CustomField>