force-app/main/default/objects/Case/fields/Lead_Status__c.field-meta.xml
<CustomField>
    <fullName>Lead_Status__c</fullName>
    <formula>TEXT( Lead__r.Status )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Status</label>
    <type>Text</type>
</CustomField>