force-app/main/default/objects/Case/recordTypes/Customer_Support.recordType-meta.xml
<RecordType>
    <fullName>Customer_Support</fullName>
    <active>true</active>
    <businessProcess>Support tickets</businessProcess>
    <label>Customer Support</label>
</RecordType>