force-app/main/default/objects/Case/recordTypes/Internal_Issue.recordType-meta.xml
<RecordType>
    <fullName>Internal_Issue</fullName>
    <active>true</active>
    <businessProcess>Support tickets</businessProcess>
    <label>Internal Issue</label>
</RecordType>