force-app/main/default/objects/Case/listViews/AIB_Ben_Issues.listView-meta.xml
<ListView>
    <fullName>AIB_Ben_Issues</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.NAME</field>
        <operation>equals</operation>
        <value>Ben Aird</value>
    </filters>
    <label>AIB Ben Issues</label>
    <language>en_US</language>
</ListView>