force-app/main/default/objects/Case/listViews/Closed_Cases.listView-meta.xml
<ListView>
    <fullName>Closed_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CASES.CLOSED_DATE</columns>
    <columns>CASES.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Closed</value>
    </filters>
    <label>Closed Cases</label>
    <language>en_US</language>
</ListView>