force-app/main/default/objects/Case/listViews/Open_Cases.listView-meta.xml
<ListView>
    <fullName>Open_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.NAME</columns>
    <columns>CASES.COMPANY</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>Open Cases</label>
    <language>en_US</language>
</ListView>